# Demo

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/docker-compose/: devcontainer.json
.devcontainer/docker-outside-of-docker/: Dockerfile  devcontainer.json
3D/f3d/: README.md  build-VTK.ps1  build-glfw.ps1  build.ps1
ASP.NET/01.Swagger/: Program.cs  README.md
ASP.NET/01_Swagger/: .gitignore  README.md  SwaggerApiDemo.csproj
ASP.NET/02_SOAP/: README.md  Run.ps1
ASP.NET/03_gRPC/: .gitignore  README.md
ASP.NET/04_gRPC-multi-proto/: Demo.sln  GeneratePrrotoCode.ps1  README.md
Appium1/: Appium1.sln
AudioSignalProcessing/01_ASIOSample/: .gitignore  Build.ps1  CMakeLists.txt  README.md  version.rc.in
AudioSignalProcessing/01_ASIOSample/src/: main.cpp
CMake/05_ReduceSizeObject/Minimum/: CMakeLists.txt
CMake/05_ReduceSizeObject/Normal/: CMakeLists.txt
CMake/05_spdlog/: CMakeLists.txt  README.md  build-spdlog.ps1  build.ps1  main.cpp
CMake/07_libsodium/: CMakeLists.txt  README.md  build-libsodium.ps1  build.ps1  main.cpp
CMake/09_cpprestsdk/: .gitignore  CMakeLists.txt  README.md  build-boost.ps1  build-cpprestsdk.ps1  build.ps1  main.cpp
CMake/10_libtar/: .gitignore  CMakeLists.txt  README.md  build.ps1  main.cpp
CMake/12_OpenMP/: CMakeLists.txt  README.md
CMake/13_libiconv/: CMakeLists.txt  README.md  build.ps1  main.cpp  sjis.txt
CMake/14_ObjectiveCWrapper/: All.sh  Build.ps1  BuildObjectiveLuhn.ps1  BuildObjectiveLuhnWrapper.ps1  CMakeLists.txt  CreateXCFramework.ps1  README.md  main.cpp
CMake/14_ObjectiveCWrapper/ObjectiveLuhn/: CMakeLists.txt  Luhn.m
CMake/14_ObjectiveCWrapper/ObjectiveLuhnWrapper/: CMakeLists.txt
CMake/14_ObjectiveCWrapper/ObjectiveLuhnWrapper/include/: luhnc.h  shared.hpp
CMake/14_ObjectiveCWrapper/ObjectiveLuhnWrapper/src/: luhnc.mm
CMake/14_ObjectiveCWrapper/maui/sources/: Demo.csproj
CMake/14_ObjectiveCWrapper/maui/sources/PInovke/: NativeMethods.cs
CMake/14_ObjectiveCWrapper/maui/sources/ViewModels/: MainPageViewModel.cs
CMake/14_ObjectiveCWrapper/maui/sources/ViewModels/Interfaces/: IMainPageViewModel.cs
CMake/14_ObjectiveCWrapper/maui/sources/Views/: MainPage.xaml
CMake/15_MSVCToolset/: Build.ps1  CMakeLists.txt  README.md
CMake/16_RuntimeLibrary/CMAKE_CXX_FLAGS/: CMakeLists.txt
CMake/17_FetchContent_Declare/: CMakeLists.txt  README.md  example.json  main.cpp
CMake/17_FetchContent_Declare/cmake/: json.cmake  zlib.cmake
CMake/18_ExternalProject_Add/: .gitignore  CMakeLists.txt  README.md  build.ps1  main.cpp
CMake/18_ExternalProject_Add/cmake/: libjpeg-turbo.cmake
CMake1/: CMakeLists.txt
CMake2/: CMakeLists.txt
CMake3/: .gitignore
CMake4/: CMakeLists.txt  README.md  Run.ps1
CNTK4/: CNTK4.sln
CUDA1/: CUDA1.sln
Caffe1/: 0.SetEnv.bat  1.CreateListFile.ps1  2.CreateDatabase.bat  7.Classify.bat  ShowResult.py  label.txt
CloudOrchestration/: install.sh
Competitions/: README.md
CppPython1/: CppPython1.sln
Dockerfiles/: README.md
DotNetCoreLinux2/: Program.cs
DotNetCoreLinux3/: Program.cs
DotNetCoreLinux5/: Program.cs
Flutter/: .gitignore
Image3/: Image3.sln
MAUI/: .gitignore  GenerateKey.ps1
ML.NET1/: MLNET.sln
MaterialTemplate/: MaterialTemplate.sln
Misc/12_DateTimeCpp/: Build.ps1  CMakeLists.txt  README.md  main.cpp
Misc/13_VSCodeGdbDebug/: CMakeLists.txt  README.md  build-opencv.ps1  build.ps1  main.cpp
Misc/15_VSCodeDebugWithCMake/: CMakeLists.txt  README.md  build-opencv.ps1  build.ps1
Misc/16_OpenMP/: CMakeLists.txt  README.md  build.ps1  main.cpp
Misc/18_LinkError__std_find_trivial_1/: Build.ps1  BuildOpenCV.ps1  CMakeLists.txt  README.md  main.cpp
Misc/23_TemplateViaTemplate/: CMakeLists.txt  README.md  build.ps1  main.cpp
Misc/24_Alternate_of_wstring_convert/: CMakeLists.txt  README.md  build.ps1  main.cpp
Misc/25_CheckVSMemoryLeak/: .gitignore  CMakeLists.txt  README.md  build.ps1  main.cpp
Misc/26_SetCpuAffinity/: Build.ps1  CMakeLists.txt  README.md  install_powershell_7.sh  main.cpp
MongoDB2/: MongoDB2.sln
MongoDB4/: MongoDB4.sln
MongoDB5/: MongoDB5.sln
MongoDB7/: MongoDB7.sln
NugetCheck/: README.md
Obfuscation4/: Obfuscation4.sln
Obfuscation5/: Obfuscation5.sln
Onvif1/: Onvif1.csproj  README.md
OpenCV3/: OpenCV3.sln
OpenCVAndroidStatic/: Build.ps1
OpenCVStatic/: .gitignore
RPC-ApacheTrift1/: ImageProcService.thrift  RPC-ApacheTrift.sln
UWP.ShortCutKey/: App.xaml  App.xaml.cs  README.md  UWP.ShortCutKey.csproj  UWP.ShortCutKey.sln
UWP/02_CppWinRTCoAwait/: CMakeLists.txt  README.md  build.ps1  main.cpp
UWP/03_MissingAPI/: CMakeLists.txt  README.md  main.cpp
WPF.Python1/: WPF.Python1.sln
WPF.Python2/: WPF.Python2.sln
WPF.SharpPcap1/: WPF.SharpPcap1.sln
WPF1/: WPF1.sln
WPF3/: WPF3.sln
WPF4/: WPF4.sln.DotSettings
Xamarin.Camera/: Xamarin.Camera.sln
Xamarin.Forms.Portable1/: Xamarin.Forms.Portable1.sln
Xamarin.Forms.Portable3/: Xamarin.Forms.Portable3.sln
Xamarin.Forms.Portable6/: Xamarin.Forms.Portable6.sln
Xamarin.Forms.Portable7/: Xamarin.Forms.Portable7.sln
Xamarin.Forms.Portable9/: Xamarin.Forms.Portable9.sln
Xamarin.Native.Nuget/: .gitignore  BuildIOS.ps1  CreatePackage.ps1  Native.Xamarin.Static.nuspec  Native.Xamarin.Static.targets  Native.Xamarin.nuspec  Native.Xamarin.targets  README.md
Xamarin.Native.Nuget/Native/: CMakeLists.txt
Xamarin.Native.Nuget1/: README.md
Xamarin.Native.Nuget2/: CreatePackage.ps1  Native.Xamarin.Static.nuspec  Native.Xamarin.nuspec  README.md
Xamarin.Native.Nuget2/NativeEratosthenes/: CMakeLists.txt
Xamarin.Native.Nuget2/NativeEratosthenes/src/: native.h
Xamarin.OpenCV/: README.md  Xamarin.OpenCV.sln  merge.sh
gRPC1/: imageProc.proto
gRPC2/: .dockerignore  build-grpc.sh  run-helloworld.sh
libjpeg-turbo-decode/: libjpeg-turbo-decode.sln
libsodium1/: main.cpp  run.ps1
libsodium2/: main.cpp  run.ps1
nginx/: .dockerignore
toolchains/: arm-ios-common.cmake  arm-linux-gnu.toolchain.cmake  arm64-ios.cmake  armv7-ios.cmake  armv7s-ios.cmake  i386-ios.cmake  x86_64-ios.cmake  x86_64-linux-gnu.toolchain.cmake
(+3887 files in other folders)
